--- a/roles/consul-enabled/templates/consul-client.conf.j2
+++ b/roles/consul-enabled/templates/consul-client.conf.j2
@@ -4,18 +4,18 @@
     "tags": ["member"]
     
     {% if service_port is defined and service_port %}
-    "port": {{ service_port }}
+    , "port": {{ service_port }}
     {% endif %}
     
     {% if healthcheck_script is defined and healthcheck_script %}
   {% if service_port is defined and service_port %},{% endif %} "check": {
       "script": "{{ healthcheck_script|default("") }}",
-      "interval": "{{ healthcheck_interval|default(10) }}"
+      "interval": "{{ healthcheck_interval|default(10) }}s"
     }
     {% elif service_port is defined and service_port %}
   , "check": {
       "script": "netstat -an | grep {{ service_port }} && exit 0 || exit 255",
-      "interval": "{{ healthcheck_interval|default(10) }}"
+      "interval": "{{ healthcheck_interval|default(10) }}s"
     }
     {% endif %}
   }
