--- a/roles/consul-enabled/templates/consul-config.j2
+++ b/roles/consul-enabled/templates/consul-config.j2
@@ -2,7 +2,7 @@
   "encrypt" : "WXI8GsuEnA48rEgayBTBaw==",
   "data_dir" : "/var/consul",
   "log_level": "INFO",
-  "datacenter": "dc01",
+  "datacenter": "datacenter01",
   "rejoin_after_leave": true,
   "retry_join" : {{consul_servers | replace("'", "\"")}}
 }
