--- a/roles/consul-enabled/templates/consul-client.conf.j2
+++ b/roles/consul-enabled/templates/consul-client.conf.j2
@@ -1,6 +1,6 @@
 {
   "service": {
-    "name": {% if consul_groupname %} "{{ consul_groupname }}" {% else %} "{{ group_names[0] }}" {% endif %},
+    "name": {% if consul_servicename %} "{{ consul_servicename }}" {% else %} "{{ group_names[0] }}" {% endif %},
     "tags": ["member"]
     
     {% if service_port is defined and service_port %}
