switched IPs advertised by consul to public IPs, to improve access from local computers and therefore: demo-ability

--- a/roles/consul-enabled/templates/consul-config.j2
+++ b/roles/consul-enabled/templates/consul-config.j2
@@ -1,4 +1,7 @@
 {
+  "advertise_addr": "{{inventory_hostname}}",
+  "advertise_addr_wan" : "{{inventory_hostname}}",
+
   "encrypt" : "WXI8GsuEnA48rEgayBTBaw==",
   "data_dir" : "/var/consul",
   "log_level": "INFO",
